fixed global alignment

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ li {
 /* This fixes the padding 0 on #content (every top-level row has a negative margin */
 #content .row {
   margin-right: 0;
+  margin-left: 0;
 }
 
 /* HEADER *********************************************************************************/
